Collapsed grant scorecards that fit 6 per row, inducing infinite horizontal scrolling as requested, cleaned up home page,admin page and postUserGrantPage UI's, fixed postUserGrantPage

--- a/ezgrant/src/pages/admin/admin-page.css
+++ b/ezgrant/src/pages/admin/admin-page.css
@@ -89,7 +89,6 @@ input[type="password"] {
   margin-right: 20px;
   color: #333;
   font-size: 16px;
-  transition: color 0.3s;
 }
 
 .ant-btn-link:hover {
